Fix icon clipping

--- a/src/components/Divider/Divider.module.scss
+++ b/src/components/Divider/Divider.module.scss
@@ -26,6 +26,7 @@
 
   .icon {
     margin: 0;
+    overflow: visible;
     padding: 0.33rem;
   }
 }
